@@ -1,16 +1,16 @@
-# FROM docker.io/bellsoft/liberica-native-image-kit-container:jdk-24-nik-24-glibc AS builder
-FROM ghcr.io/graalvm/native-image-community:24 AS builder
+FROM docker.io/bellsoft/liberica-native-image-kit-container:jdk-24-nik-24-musl AS builder
+# FROM ghcr.io/graalvm/native-image-community:24-muslib AS builder
 WORKDIR /tmp
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
+ADD .mvn/ .mvn
+ADD mvnw pom.xml ./
 RUN --mount=type=cache,target=/root/.m2 \
-   ./mvnw dependency:resolve
-COPY src/ src
+   ./mvnw dependency:go-offline
+ADD src/ src
 RUN --mount=type=cache,target=/root/.m2 \
    ./mvnw compile spring-boot:process-aot package \
-      -DskipTests -Djacoco.skip -Dmaven.compiler.proc=full
+   -Dmanven.test.skip=true -DskipTests -Djacoco.skip
 RUN mkdir -p target/extracted && \
-      (cd target/extracted; jar -xf ../*.jar)
+   (cd target/extracted; jar -xf ../*.jar)
 
 FROM scratch AS optimizer
 WORKDIR /tmp
@@ -22,12 +22,14 @@ COPY --from=builder ${DEPENDENCY}/BOOT-INF/classes ./
 FROM docker.io/bellsoft/liberica-runtime-container:jre-24-slim-musl AS runner
 # FROM docker.io/bellsoft/liberica-openjre-alpine-musl:24 AS runner
 COPY --chmod=755 --from=optimizer /tmp /app
-RUN addgroup --system nonroot && \
-   adduser -S -s /usr/sbin/nologin -D -H -G nonroot nonroot
-USER nonroot:nonroot
+RUN adduser --disabled-password -u 10001 nonroot \
+   && echo "nonroot:x:10001:10001:App User:/:/sbin/nologin" > /etc/minimal-passwd
+USER nonroot
 SHELL ["/bin/sh", "-c"]
 CMD java -Dserver.port=$PORT $JAVA_OPTS \
-      -XX:+UseContainerSupport \
-      -XX:MaxRAMPercentage=75.0 \
-      -Dspring.aot.enabled=true \
-      -cp app:app/lib/* com.fiappostech.fastfood.FastfoodApplication
+   -Dfile.encoding=UTF-8 \
+   -Dspring.aot.enabled=true \
+   -Dspring.backgroundpreinitializer.ignore=true \
+   -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 \
+   -XX:+UnlockExperimentalVMOptions -XX:ShenandoahGCMode=generational -XX:+UseCompactObjectHeaders \
+   -cp app:app/lib/* com.fiappostech.fastfood.FastfoodApplication
